--- a/comunautruche-web/src/index.css
+++ b/comunautruche-web/src/index.css
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+    background-image: 'url(https://files.123freevectors.com/wp-content/original/154027-abstract-blue-and-white-background-design.jpg)',
+
+
 }
 
 code {
